crud et test pour toutes nos tables sauf item_tag
